# 2d-sdl-game

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  attributes.yaml  setup.sh  shell.nix
assets/: ephebe.mtl
assets/Chicken/: chickenV2.dae  chickenV2.mtl
assets/Crate/: Crate1.mtl
assets/shaders/: fallback.frag  id.frag  id.vert  id_simple.vert  id_texture.vert  red.frag  screen_shader.frag  screen_shader.vert  skinned.vert  texture.frag
cmake/: common.cmake  gtest.cmake
src/: constants.hpp  facing.hpp  iterator_wrapper.hpp  main.cpp  player.cpp  player.hpp  playerconfig.cpp  playerconfig.hpp  scenes.cpp  scenes.hpp  util.cpp  util.hpp  widthbuf.hpp
src/engine/: base.hpp  engine.cpp  entity.cpp  entity.hpp  game.cpp  game.hpp  gl.cpp  gl.h  input.cpp  input.hpp  joystickindicator.cpp  joystickindicator.hpp  pair.cpp  pair.hpp  scene.cpp  scene.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp  util.cpp  util.hpp
src/engine/input/: input.cpp  input.hpp  joystick.cpp  joystick.hpp  keyboard.cpp  keyboard.hpp
src/engine/material/: material.cpp  material.hpp
src/engine/mesh/: cube.cpp  cube.hpp  screenspacequad.cpp  screenspacequad.hpp  staticmesh.cpp  staticmesh.hpp  worldspacemesh.cpp  worldspacemesh.hpp
src/engine/meshanim/: meshanim.cpp  meshanim.hpp
src/engine/model/: boneweightset.cpp  boneweightset.hpp  boneweigthset.hpp  cube.cpp  cube.hpp  model.cpp  model.hpp  modelloader.cpp  modelloader.hpp  modelmesh.hpp  staticmesh.cpp  staticmesh.hpp
src/engine/model/loader/: AnimationLoader.cpp  AnimationLoader.hpp  VertexLoader.cpp  VertexLoader.hpp  boneweightloader.cpp  boneweightloader.hpp  loadedmesh.hpp  modelloader.cpp  modelloader.hpp
src/engine/renderer/: abstractrenderer.hpp  meshrenderer.cpp  meshrenderer.hpp  multimeshrenderer.cpp  multimeshrenderer.hpp  multirenderer.cpp  multirenderer.hpp  screenrenderer.cpp  screenrenderer.hpp
src/engine/renderer/lib/: loadshaders.cpp  loadshaders.hpp
src/engine/shader/: basicshader.cpp  basicshader.hpp  meshshader.cpp  meshshader.hpp  primitiveshader.cpp  primitiveshader.hpp  screenspaceshader.cpp  screenspaceshader.hpp  skinnedmeshshader.cpp  skinnedmeshshader.hpp
src/engine/shader/lib/: loadshaders.cpp  loadshaders.hpp
src/engine/texture/: texture.cpp  texture.hpp
src/player/: action.cpp  action.hpp  actionstates  animationbank.cpp  animationbank.hpp  ecb.cpp  ecb.hpp  ecbmesh.cpp  ecbmesh.hpp  inputhandler.cpp  inputhandler.hpp  player.cpp  player.hpp  playercollision.cpp  playercollision.hpp  playerconfig.cpp  playerconfig.hpp
src/scenes/: mainscene.cpp  mainscene.hpp
src/terrain/: collisiondatum.cpp  collisiondatum.hpp  collisiontype.hpp  ledge.cpp  ledge.hpp  map.cpp  map.hpp  map_movement.cpp  map_movement.hpp  physics.cpp  physics.hpp  platform.cpp  platform.hpp  platform_movement.hpp  platform_point_iterator.cpp  platform_point_iterator.hpp  platform_segment_iterator.cpp  platform_segment_iterator.hpp  platformpoint.cpp  platformpoint.hpp  platformsegment.cpp  platformsegment.hpp
test-assets/: cube_move.blend  cube_move.dae  cube_move2.blend  cube_move2.blend1  cube_move2.fbx  cube_move_2part.dae
tests/: animationloader.cpp  boneweightloader.cpp  boneweigthset.cpp  ecb.cpp  main.cpp  map.cpp  meshshader.cpp  modelloader.cpp  platform.cpp  player.cpp  util.cpp
tests/lib/: mock-player.cpp  mock-player.hpp  on-line.cpp  on-line.hpp
